# promptflow

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  LOL.txt  README.md  SUPPORT.md  abc.ps1  coverage_html.js  cspell.json  d_2643392149bea4d8___init___py.html  d_26f7aef8246d830f___init___py.html  d_6c46942e6f3a8be8___init___py.html  d_6c46942e6f3a8be8__errors_py.html  d_6c46942e6f3a8be8_cache_manager_py.html  d_6c46942e6f3a8be8_connection_manager_py.html  d_6c46942e6f3a8be8_flow_execution_context_py.html  d_6c46942e6f3a8be8_generator_proxy_py.html  d_6c46942e6f3a8be8_log_manager_py.html  d_6c46942e6f3a8be8_metric_logger_py.html  d_6c46942e6f3a8be8_openai_injector_py.html  d_6c46942e6f3a8be8_operation_context_py.html  d_6c46942e6f3a8be8_run_tracker_py.html  d_6c46942e6f3a8be8_thread_local_singleton_py.html  d_6c46942e6f3a8be8_tool_meta_generator_py.html  d_6c46942e6f3a8be8_tool_py.html  d_6c46942e6f3a8be8_tools_manager_py.html  d_6c46942e6f3a8be8_tracer_py.html  d_869857c801862e2f___init___py.html  d_869857c801862e2f__dag_manager_py.html  d_869857c801862e2f__errors_py.html  d_869857c801862e2f__flow_nodes_scheduler_py.html  d_869857c801862e2f__input_assignment_parser_py.html  d_869857c801862e2f__line_execution_process_pool_py.html  d_869857c801862e2f__result_py.html  d_869857c801862e2f__tool_resolver_py.html  d_869857c801862e2f_flow_executor_py.html  d_869857c801862e2f_flow_validator_py.html  (+47 more)
src/promptflow/: .env.example  CHANGELOG.md  MANIFEST.in  MyStorageRecord.json  NOTICE.txt  README.md  app.py  az.py  dev-connections.json.example  dev_requirements.txt  endpoint_config.json.example  msi_requirements.txt  pf  pf.autocomplete.sh  pf.bat  product.wxs  pyproject.toml  readme.md  sample_trace.json  sample_trace_error.json  setup.py
src/promptflow-azure/: CHANGELOG.md  README.md  pyproject.toml
src/promptflow-azure/promptflow/azure/: __init__.py  _pf_client.py  _user_agent.py  _version.py
src/promptflow-azure/tests/: _constants.py  conftest.py
src/promptflow-azure/tests/sdk_cli_azure_test/: conftest.py
src/promptflow-azure/tests/unittests/: test.py
src/promptflow-core/: CHANGELOG.md  README.md  README.md_.md  conftest.py  pyproject.toml
src/promptflow-core/promptflow/: _constants.py  constants.py  exceptions.py  execution_app.py
src/promptflow-core/promptflow/_core/: _errors.py  connection_manager.py  entry_meta_generator.py  log_manager.py  run_tracker.py  token_provider.py  tool.py  tool_meta_generator.py  tool_settings_parser.py  tools_manager.py
src/promptflow-core/promptflow/_internal/: __init__.py
src/promptflow-core/promptflow/_utils/: _errors.py  async_utils.py  connection_utils.py  context_utils.py  credential_scrubber.py  credential_utils.py  dataclass_serializer.py  exception_utils.py  execution_utils.py  feature_utils.py  flow_utils.py  inputs_mapping_utils.py  load_data.py  logger_utils.py  multimedia_data_converter.py  multimedia_utils.py  process_utils.py  retry_utils.py  run_tracker_utils.py  thread_utils.py  tool_utils.py  user_agent_utils.py  utils.py  version_hint_utils.py  yaml_utils.py
src/promptflow-core/promptflow/connections/: __init__.py
src/promptflow-core/promptflow/contracts/: chat_group.py  flow.py  multimedia.py  run_info.py  run_mode.py  tool.py  types.py
src/promptflow-core/promptflow/core/: __init__.py  _connection.py  _errors.py  _flow.py  _model_configuration.py  _prompty_utils.py  _utils.py  _version.py
src/promptflow-core/promptflow/executor/: _assistant_tool_invoker.py  _async_nodes_scheduler.py  _docstring_parser.py  _errors.py  _flow_nodes_scheduler.py  _input_assignment_parser.py  _line_execution_process_pool.py  _process_manager.py  flow_executor.py  (+4 more)
src/promptflow-core/tests/: _constants.py  conftest.py  utils.py
src/promptflow-devkit/: CHANGELOG.md  README.md  README.md_.md  pf  pyproject.toml
src/promptflow-devkit/promptflow/: __init__.py
src/promptflow-devkit/tests/: _constants.py  conftest.py
src/promptflow-evals/: CHANGELOG.md  README.md  dev_requirements.txt  flow.flex.yaml  pyproject.toml  requirements.txt  setup.py
src/promptflow-evals/promptflow/: version.txt
src/promptflow-evals/samples/: EvaluatorUpload.ipynb  aoai_evaluators.py  bert_score_example.py  built_in_evaluators.py  chat_sample_data.jsonl  data.jsonl  evaluate_chat.py  evaluate_test_data.jsonl  evaluation.py  simulator_demo.ipynb  task_sim.py  using_evaluate.py
src/promptflow-evals/tests/: test_evaluate.py
src/promptflow-parallel/: README.md  pyproject.toml
src/promptflow-rag/: CHANGELOG.md  README.md  build_index_sample.ipynb  connections-example.json  pyproject.toml  requirements.txt  setup.py  test.py  version.txt
src/promptflow-rag/3-product-info/: product_info_1.md  product_info_10.md  product_info_13.md  product_info_15.md  product_info_4.md  product_info_5.md
src/promptflow-rag/bugbash/: azureml_rag-0.1.0.0-py3-none-any.whl  build_index_sample.ipynb  requirements.txt
src/promptflow-rag/product-info/: product_info_11.md  product_info_18.md  product_info_19.md  product_info_2.md  product_info_20.md  product_info_7.md  product_info_8.md  product_info_9.md
src/promptflow-rag/promptflow/: version.txt
src/promptflow-rag/tests/: conftest.py
src/promptflow-recording/: README.md  README.md_.md  pyproject.toml  requirements.txt
src/promptflow-recording/promptflow_recording/: record_mode.py
src/promptflow-test-utils/: pyproject.toml
src/promptflow-test-utils/promptflow_test/: record_mode.py
src/promptflow-tracing/: CHANGELOG.md  README.md  pyproject.toml
src/promptflow-tracing/promptflow/: __init__.py
src/promptflow-tracing/tests/: conftest.py  utils.py
src/promptflow/promptflow/: .bumpversion.cfg  __init__.py  _constants.py  _devkit_constants.py  _errors.py  _version.py  connections.py  entities.py  errors.py  exceptions.py  load_functions.py
src/promptflow/tests/: _constants.py  api.py  conftest.py  dump_model.py  executor.py  export_to_promptflow_model.py  import_from_promptflow_model.py  model.py  mt_api.py  prepare_tests.py  submit_yaml.py
(+6858 files in other folders)
