[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

# poetry
[tool.poetry]
name = "promptflow"
version = "1.7.0.dev0"
description = "Prompt flow Python SDK - build high-quality LLM apps"
authors = [
  "Microsoft Corporation <aml-pt-eng@microsoft.com>"
]

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
promptflow-tracing = { path = "./src/promptflow-tracing", develop = true }
promptflow-core = { path = "./src/promptflow-core", develop = true }
promptflow-devkit = { path = "./src/promptflow-devkit", develop = true }
promptflow-azure = { path = "./src/promptflow-azure", develop = true }
