[tool.poetry]
name = "promptflow-recording"
version = "0.1.0b1"
description = "Prompt flow recording utilities"

license = "MIT"

authors = [
  "Microsoft Corporation <aml-pt-eng@microsoft.com>"
]

repository = "https://github.com/microsoft/promptflow"
homepage = "https://microsoft.github.io/promptflow/"

readme = ["README.md"]
keywords = ["promptflow_recording"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "promptflow" }
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/microsoft/promptflow/issues"

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
vcrpy = ">=6.0.1"
filelock = "*"
promptflow-tracing = ">=0.1.0b1, <2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
import-linter = "*"

[build-system]
requires = [
  "poetry-core>=1.5.0",
]
build-backend = "poetry.core.masonry.api"
