[tool.poetry]
name = "promptflow-tracing"
version = "0.1.0b2"
description = "Prompt flow tracing"

license = "MIT"

authors = [
  "Microsoft Corporation <aml-pt-eng@microsoft.com>"
]

repository = "https://github.com/microsoft/promptflow"
homepage = "https://microsoft.github.io/promptflow/"

readme = ["README.md"]
keywords = ["telemetry"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "promptflow" }
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/microsoft/promptflow/issues"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
openai = "*"
tiktoken = ">=0.4.0"
opentelemetry-sdk = ">=1.22.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unittest",
]
addopts = """
--cov=promptflow \
--cov-report=term \
--cov-report=html \
--cov-report=xml \
--dist loadfile \
--log-level=info \
--log-format="%(asctime)s %(levelname)s %(message)s" \
--log-date-format="[%Y-%m-%d %H:%M:%S]" \
--durations=5 \
-ra \
-vv
"""
testpaths = ["tests"]

[tool.coverage.report]
omit = [
  "__init__.py",
]

[tool.black]
line-length = 120
