[tool.poetry]
name = "promptflow-tracing"
version = "0.1.0b2"
description = "Prompt flow tracing"

license = "MIT"

authors = [
  "Microsoft Corporation <aml-pt-eng@microsoft.com>"
]

repository = "https://github.com/microsoft/promptflow"
homepage = "https://microsoft.github.io/promptflow/"

readme = ["README.md"]
keywords = ["telemetry"]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

packages = [
  { include = "promptflow" }
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/microsoft/promptflow/issues"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
openai = "*"
tiktoken = ">=0.4.0"
opentelemetry-sdk = ">=1.22.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
import-linter = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.importlinter]
root_package = "promptflow.tracing"
include_external_packages = "True"

[[tool.importlinter.contracts]]
name = "Contract forbidden modules"
type = "forbidden"
source_modules = ["promptflow.tracing"]
forbidden_modules = ["promptflow.tools", "promptflow.devkit", "promptflow.azure", "promptflow.core"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "unittest",
]
# junit - analyse and publish test results (https://github.com/EnricoMi/publish-unit-test-result-action)
# durations - list the slowest test durations
addopts = """
--junit-xml=test-results.xml \
--cov=promptflow \
--cov-config=pyproject.toml \
--cov-report=term \
--cov-report=html \
--cov-report=xml \
--dist loadfile \
--log-level=info \
--log-format="%(asctime)s %(levelname)s %(message)s" \
--log-date-format="[%Y-%m-%d %H:%M:%S]" \
--durations=5 \
-ra \
-vv
"""
testpaths = ["tests"]

[tool.coverage.run]
omit = [
  "__init__.py",
]

[tool.black]
line-length = 120
