# [build-system]
# requires = ["poetry-core>=1.5.0"]
# build-backend = "poetry.core.masonry.api"

# # poetry
# [tool.poetry]
# name = "promptflow"
# version = "1.7.0.dev0"
# description = "Prompt flow Python SDK - build high-quality LLM apps"
# authors = [
#   "Microsoft Corporation <aml-pt-eng@microsoft.com>"
# ]

# [tool.poetry.dependencies]
# python = "<4.0,>=3.9"
# promptflow-tracing = { path = "../promptflow-tracing", develop = true }
# promptflow-core = { path = "../promptflow-core", develop = true }
# promptflow-devkit = { path = "../promptflow-devkit", develop = true }
# promptflow-azure = { path = "../promptflow-azure", develop = true }

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "sdk_test",
    "cli_test",
    "unittest",
    "e2etest",
    "flaky",
    "endpointtest",
    "mt_endpointtest",
]

[tool.coverage.run]
omit = [
    # omit anything in a _restclient directory anywhere
    "*/_restclient/*",
]
